[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/scenes/loot/item.gd" type="Script" id=1]
[ext_resource path="res://source/scenes/loot/item_3d.gd" type="Script" id=2]
[ext_resource path="res://source/scenes/loot/item_2d.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://source/scenes/loot/drop_shield.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "DROP"
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 2, 1 ), Vector3( 0, 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 180, 0, 45 ), Vector3( 360, 0, 90 ), Vector3( 540, 0, 135 ), Vector3( 630, 0, 180 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.683728, 0.318304, 0.183185 )

[node name="item" type="Node"]
script = ExtResource( 1 )

[node name="item_3d" type="RigidBody" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="animation_player" type="AnimationPlayer" parent="item_3d"]
anims/DROP = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="audio_player" type="AudioStreamPlayer3D" parent="item_3d"]

[node name="drop_shield" type="Sprite3D" parent="item_3d"]
billboard = 1
double_sided = false
render_priority = 1
script = ExtResource( 5 )

[node name="item_name" type="Label3D" parent="item_3d/drop_shield"]
billboard = 1
double_sided = false
render_priority = 2
text = "TEST"

[node name="click_shield" type="Area" parent="item_3d/drop_shield"]

[node name="CollisionShape" type="CollisionShape" parent="item_3d/drop_shield/click_shield"]
shape = SubResource( 3 )

[node name="item_2d" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="item_sprite" type="Sprite" parent="item_2d"]
texture = ExtResource( 4 )

[connection signal="input_event" from="item_3d/drop_shield/click_shield" to="." method="_on_click_shield_input_event"]
[connection signal="mouse_entered" from="item_3d/drop_shield/click_shield" to="item_3d/drop_shield" method="_on_click_shield_mouse_entered"]
[connection signal="mouse_exited" from="item_3d/drop_shield/click_shield" to="item_3d/drop_shield" method="_on_click_shield_mouse_exited"]
